<resources>
    <string name="app_name">সম্পত্তির বন্টন</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="title_activity_main_addview">mainAddview</string>

    <string name="action_facebook">Facebook Page</string>
    <string name="action_apps">More Apps</string>
    <string name="home">Home</string>
    <string name="action_ratings">Rate this App</string>
    <string name="action_update">Update this App</string>
    <string name="action_close">Exit App</string>

    <string name="detailsInfo">Details info</string>
    <string name="info">বিধি</string>
    <string name="ask">জিজ্ঞাসা</string>


    <string name="more_apps">More Apps</string>
    <string name="action_bdResult">All Bd Results</string>
    <string name="action_bdjobs">All Bd Jobs</string>


    <string name="action_key">Admob key</string>
    <!--<string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--<string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>-->

    <string name="banner_ad_unit_id">ca-app-pub-4951262838901192/9545904182</string>
    <string name="interstitial_ad_unit_id">ca-app-pub-4951262838901192/9440417814</string>


    <string name="title_activity_add_view">addView</string>
    <string name="title_activity_main">Uttoradicar</string>

</resources>
